# agent-driven_gen

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  categories.txt  category_tree.txt  check.bat  check.sh  codex.sh  conversation-2026-07-19-084922.txt  docker-compose.yml  done.txt  package.json  pnpm-lock.yaml  ports.json  run.bat  run.sh  skills-lock.json  trust.bat  trust.sh
.claude/: CLAUDE.md  settings.json  settings.local.json
.codex/: config.toml
.playwright-cli/: page-2026-07-17T04-38-49-979Z.yml  page-2026-07-17T04-39-53-226Z.yml  page-2026-07-17T04-40-09-887Z.yml  page-2026-07-17T04-40-35-958Z.yml  page-2026-07-17T04-40-47-682Z.yml  page-2026-07-17T04-40-54-896Z.yml  page-2026-07-17T04-41-15-407Z.yml  (+10 more)
apps/back/: .env  .env.example  alembic.ini  pyproject.toml
apps/back/.playwright-cli/: page-2026-07-18T10-17-52-677Z.yml  page-2026-07-18T10-27-38-533Z.yml  page-2026-07-18T10-27-59-842Z.yml  page-2026-07-18T10-28-19-591Z.yml  page-2026-07-18T11-58-21-384Z.yml  page-2026-07-18T11-58-52-263Z.yml  page-2026-07-18T11-59-04-769Z.yml  page-2026-07-20T03-50-10-881Z.yml  page-2026-07-20T03-53-14-090Z.yml
apps/back/app/: __init__.py  main.py
apps/back/app/api/: deps.py
apps/back/app/api/v1/: __init__.py  capacity_audit.py  cross_analysis.py  dashboard.py  data_import.py  departments.py  drill_down.py  filters.py  health.py  items.py  projects.py  roles.py  system.py
apps/back/app/core/: config.py  exceptions.py  logging.py  middleware.py  scheduler.py  security.py  time.py
apps/back/app/datasources/: __init__.py  base.py  excel_provider.py
apps/back/app/db/: base.py  migrate.py  session.py
apps/back/app/models/: __init__.py  employee.py  holiday.py  item.py  pagination.py  project_category.py  should_be_capacity.py  three_fast_plan.py  work_hour.py
apps/back/app/repositories/: data_import_repository.py  employee_repository.py  holiday_repository.py  item_repository.py  project_category_repository.py  should_be_capacity_repository.py  three_fast_plan_repository.py  work_hour_repository.py
apps/back/app/services/: capacity_audit_service.py  cross_analysis_service.py  dashboard_service.py  data_import_service.py  department_service.py  drill_down_service.py  filter_service.py  filters.py  item_service.py  project_matching_engine.py  project_service.py  role_service.py  should_be_capacity_engine.py  system_service.py
apps/back/app/tests/: conftest.py  test_capacity.py  test_capacity_unit.py  test_config.py  test_item_service.py  test_items.py  test_migrations.py  test_project_matching_engine.py  test_request_id.py  test_scheduler.py  test_security.py  test_should_be_capacity_engine.py  test_system.py
apps/back/migrations/: env.py
apps/back/migrations/versions/: 2d5acf20f8ae_initial_item_table.py  f9897fc8b39e_add_capacity_analysis_tables.py
apps/back/scripts/: import_data.py
deploy/: start.sh  stop.sh
(+126 files in other folders)
